Change user rights for file edit, fix autocmoplete and file_dropzone z-index

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -71,6 +71,7 @@ table.table thead .sorting_desc { background: url('../images/sort_desc.png') no-
 	.icon-big.icon-arrow-up{background:url('../images/icons-big/glyphicons_213_up_arrow.png') 50% 50% no-repeat;}
 	.icon-big.icon-plus-sign{background:url('../images/icons-big/glyphicons_190_circle_plus.png') 50% 50% no-repeat;}
 
+.tab-pane.row.active{min-height:345px;}
 
 /*File types*/
 .thumbnail{position:relative;}
@@ -117,12 +118,13 @@ table.table thead .sorting_desc { background: url('../images/sort_desc.png') no-
     opacity: 1;
 }
 
-.tab-content{position:relative;z-index:1;}
+.tab-content{position:relative;}
 	.tab-pane{}
+	.tab-content .tab-pane-initial{}
 	.tab-content .tab-pane-initial.active{height:350px;}
 	.tab-content > .tab-pane.display{display:block;}
 	.tab-content > .tab-pane.uploading{display:block;}
-	.tab-content #file_dropzone{position:absolute;top:1px;right:0;background-color:#fff;display:none;}
+	.tab-content #file_dropzone{position:absolute;top:1px;right:0;background-color:#fff;display:none;z-index:3;}
 		.tab-content .active #file_dropzone{display:block;}
 	.tab-content #file_dropzone.in{display:block;background:#eee;}
 	.tab-content #file_dropzone.in.hover{display:block;background:#fff;border:1px dashed #666;}
